--- a/style.css
+++ b/style.css
@@ -13,15 +13,11 @@ body {
   margin: 0;
 }
 
-#header {
-
-}
-
 #content {
   max-width: 1000px;
   height: 100%;
   margin: 0 auto;
-  padding: 20px 50px;
+  padding: 2rem 3rem;
 
   display: flex;
   flex-direction: column;
@@ -50,38 +46,15 @@ body {
   align-items: baseline;
 }
 
-#menu.expanded {
-  flex-flow: column;
-  align-items: stretch;
-}
-
-#menu.expanded li:not(:first-child) {
-  color: white;
-  background-color: #373535;
-  padding: 0.5rem;
-}
-
-#menu.expanded #hamburger {
-  fill: white;
-  background-color: #373535;
-}
-
 #menu #hamburger {
-  height: calc(0.7*1.8rem);
-  fill: #373535;
-  margin-left: 3rem;
-  padding: 1rem;
+  display: none;
 }
 
 #menu > li {
   flex: 1 0 auto;
   margin: 0 1rem;
 
-  display: flex;
-  flex-flow: row;
-  justify-content: space-between;
-  align-items: stretch;
-
+  display: block;
   text-align: right;
   font-size: 1.8rem;
   font-weight: 900;
@@ -89,13 +62,60 @@ body {
 }
 
 #menu > li:first-child {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: flex-end;
 
   flex: 3 0 auto;
 }
 
 #logo {
-  font-size: 3rem;
-  text-align: left;
+  height: calc(0.75*3rem);
+}
+
+@media (max-width: 768px) {
+  #menu:not(.expanded) li:not(:first-child) {
+    display: none;
+  }
+
+  #menu.expanded > li:first-child {
+    margin-bottom: 2rem;
+  }
+
+  #menu #hamburger {
+    display: block;
+    height: calc(0.75*3rem - 1rem);
+    fill: #373535;
+    padding: 3rem 3rem 2rem 3rem;
+    margin: -3rem -3rem -2rem 3rem;
+  }
+
+  #menu.expanded #hamburger {
+    fill: white;
+    background-color: #373535;
+  }
+
+  #menu.expanded {
+    flex-flow: column;
+    align-items: stretch;
+  }
+
+  #menu.expanded li:not(:first-child) {
+    color: white;
+    background-color: #373535;
+
+    text-align: left;
+    padding: 0.5rem calc(3rem + 1rem);
+    margin: 0 -3rem;
+  }
+
+  #menu.expanded li:last-child {
+    padding-bottom: 1.5rem;
+  }
+  #menu.expanded li:nth-child(2) {
+    padding-top: 1.5rem;
+  }
 }
 
 div.page-header {
@@ -124,6 +144,12 @@ div.info-group {
 
   display: flex;
   flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  div.info-group {
+    flex-direction: column;
+  }
 }
 
 div.info-item {
