--- a/style.css
+++ b/style.css
@@ -146,14 +146,49 @@ div.info-group {
   flex-direction: row;
 }
 
+div.info-item {
+  flex: 2 2 0;
+  margin: 1rem;
+}
+
+div.bio-portrait {
+  flex: 1 2 10rem;
+  margin: 1rem;
+  margin-top: 1.35rem;
+
+  background-position: center;
+  background-size: cover;
+}
+
+div.bio-contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+
+  margin: 0 -0.5rem;
+}
+
+div.bio-contact > svg {
+  margin: 0 0.5rem;
+}
+
+div.info-group:nth-of-type(2n) > div.info-item {
+  order: -1;
+}
+
 @media (max-width: 768px) {
   div.info-group {
     flex-direction: column;
   }
-}
 
-div.info-item {
-  margin: 1rem;
+  div.bio-portrait {
+    flex-basis: 500px;
+    flex-basis: 100vw;
+  }
+
+  div.info-group:nth-of-type(2n) > div.info-item {
+    order: 0;
+  }
 }
 
 h4 {
@@ -207,7 +242,7 @@ p {
   margin: 0 1.2rem;
 }
 
-.contact-footer > svg {
+.contact-footer > svg, .bio-contact > svg {
   background-color: #05568A;
   fill: white;
   height: 1.8rem;
