Add content to front page, and fix layout.

--- a/style.scss
+++ b/style.scss
@@ -17,12 +17,14 @@ html {
   font-weight: 400;
   font-size: 14px;
   color: $seedplus-gray;
+  height: 100%;
 }
 
 body {
   display: flex;
   flex-flow: column nowrap;
   width: 100%;
+  min-height: 100%;
   padding: 0;
   margin: 0;
 }
@@ -37,7 +39,7 @@ h3 > a {
 
 #content {
   max-width: 1000px;
-  height: 100%;
+  flex: 1 0 auto;
   margin: 0 auto;
   padding: $vertical-page-margin $horizontal-page-margin;
 
@@ -168,15 +170,14 @@ $logo-bottom-padding: 1.5rem;
 
 div.page-header {
   max-width: 700px;
-  margin-top: 5rem;
+  margin: 5rem 0 1rem 0;
   padding: 1rem;
+  flex: 1 0 auto;
 }
 
 div.page-header > h1 {
   display: inline;
   font-size: 7rem;
-  font-size: 8vmin;
-  font-size: 8vm;
   font-weight: 700;   
   text-transform: uppercase;
   color: white;
@@ -185,6 +186,17 @@ div.page-header > h1 {
   white-space: nowrap;
   /* TODO: this should be box-decoration-break once support is common enough */
   box-shadow: 1rem 0 0 $jungle-blue, -1rem 0 0 $jungle-blue;
+}
+
+@media (max-width: 768px) {
+  div.page-header {
+    margin: 3rem 0 0 0;
+    margin: calc((100vw - 2*#{$horizontal-page-margin})/10) 0 0 0;
+  }
+  div.page-header > h1 {
+    font-size: calc((100vw - 2*#{$horizontal-page-margin})/7);
+    font-size: 13vm;
+  }
 }
 
 div.info-group {
@@ -274,8 +286,9 @@ p {
 
 .contact-footer {
   display: flex;
+  flex: 10 0 auto;
   flex-flow: row wrap;
-  align-items: flex-start;
+  align-items: flex-end;
   
   margin: 2rem -0.5rem 1rem -0.5rem;
 }
