--- a/style.scss
+++ b/style.scss
@@ -7,8 +7,9 @@ $jungle-blue: #05568A;
 $vertical-page-margin: 2rem;
 $horizontal-page-margin: 3rem;
 
+$underline-width: 0.33rem;
 @mixin border-underline($color) {
-  border-bottom: 0.4rem solid $color;
+  border-bottom: $underline-width solid $color;
   transition: border-bottom .1s;
 }
 
@@ -23,6 +24,7 @@ html {
 body {
   display: flex;
   flex-flow: column nowrap;
+  align-items: center;
   width: 100%;
   min-height: 100%;
   padding: 0;
@@ -38,9 +40,10 @@ h3 > a {
 }
 
 #content {
+  width: 100%;
   max-width: 1000px;
-  flex: 1 0 auto;
-  margin: 0 auto;
+  flex: 1 0 100%;
+  box-sizing: border-box;
   padding: $vertical-page-margin $horizontal-page-margin;
 
   display: flex;
@@ -59,10 +62,13 @@ footer > p {
   margin: 0 auto;
   color: white;
 }
+$logo-height: 0.75 * 3rem;
+$logo-hamburger-height-difference: 1rem;
+$logo-bottom-padding: 1.5rem;
 
 #menu {
   padding: 0;
-  margin: 0 -1rem;
+  margin: 0 (-1rem) $logo-bottom-padding (-1rem);
 
   display: flex;
   flex-flow: row;
@@ -107,10 +113,6 @@ footer > p {
   @include border-underline($seedplus-gray);
 }
 
-$logo-height: 0.75 * 3rem;
-$logo-hamburger-height-difference: 1rem;
-$logo-bottom-padding: 1.5rem;
-
 #logo {
   height: $logo-height;
 }
@@ -130,7 +132,7 @@ $logo-bottom-padding: 1.5rem;
     }
     display: inline;
     fill: $seedplus-gray;
-    padding: ($vertical-page-margin + $logo-hamburger-height-difference) $horizontal-page-margin ($logo-bottom-padding + 0.4rem) $horizontal-page-margin;
+    padding: ($vertical-page-margin + $logo-hamburger-height-difference) $horizontal-page-margin ($logo-bottom-padding + $underline-width) $horizontal-page-margin;
     margin: (-$vertical-page-margin - $logo-hamburger-height-difference) (-$horizontal-page-margin) (-$logo-bottom-padding) 3rem;
   }
 
@@ -142,6 +144,7 @@ $logo-bottom-padding: 1.5rem;
   #menu.expanded {
     flex-flow: column;
     align-items: stretch;
+    margin-bottom: 0;
   }
 
   #menu.expanded li:not(:first-child) {
@@ -284,35 +287,54 @@ p {
   margin-bottom: 0;
 }
 
-.contact-footer {
+div.contact-map {
+  flex: 20 0 30rem;
+  background-color: lighten($seedplus-gray, 90%);
+}
+
+@media (max-width: 768px) {
+  div.contact-map {
+    flex-basis: 500px;
+    flex-basis: 50vh;
+
+    margin: 0 (-$horizontal-page-margin);
+  }
+}
+
+.contact {
   display: flex;
   flex: 10 0 auto;
   flex-flow: row wrap;
-  align-items: flex-end;
-  
+
+
   margin: 2rem -0.5rem 1rem -0.5rem;
 }
 
-.contact-footer > * {
-  margin: 0 0.5rem;
+.contact-address {
+  align-items: flex-start;
+  margin-top: 3rem;
 }
 
-.contact-footer > h3 {
+.contact-footer {
+  align-items: flex-end;
+}
+
+.contact > h3 {
   display: block;
   flex: 1 0 auto;
-  margin-top: 0.4rem;
-  margin-bottom: 0.4rem;
+  margin: 0.4+0.3rem 0.5rem 0.4+0.3rem 0.5rem;
 }
 
-.contact-footer > h2 {
-  margin: 0 1.2rem;
+.contact > h2 {
+  margin: 0.3rem 1.2rem;
 }
 
-.contact-footer > svg, .bio-contact > svg {
+.contact svg, .bio-contact svg {
   background-color: $jungle-blue;
   fill: white;
   height: 1.8rem;
   padding: 0.5rem;
+  margin: 0.3rem 0.5rem;
 }
 
 h3 {
