Add favicons for all platforms.

--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
+/* If these are changed, make sure to update theme colors in the header and the map on contact page */
 $seedplus-gray: #373535;
 $jungle-blue: #05568A;
 
