--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
   <title>{{ site.title | escape }}{% if page.title %} - {{ page.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,800,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
   <link rel="apple-touch-icon" sizes="57x57" href="/images/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/images/favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/images/favicons/apple-icon-72x72.png">
@@ -30,7 +34,13 @@
   <meta property="og:type" content="website" />
   <meta property="fb:admins" content="100000901583954" />
 
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,800,900' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74072735-1', 'auto');
+  ga('send', 'pageview');
+  </script>
 </head>
