--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,7 @@ h3 > a {
 footer {
   width: 100%;
   background-color: $seedplus-gray;
-  font-family: 400;
+  font-weight: 400;
   padding: 1rem 0;
   text-align: center;
 
