--- a/style.scss
+++ b/style.scss
@@ -232,6 +232,10 @@ div.info-item {
   margin: 1rem;
 }
 
+div.info-item h4:not(:first-of-type) {
+  margin-top: 2rem;
+}
+
 div.info-sidebar {
   flex: 0 0 auto;
   margin: 1rem;
