First growth session is now past.

--- a/style.scss
+++ b/style.scss
@@ -239,6 +239,7 @@ div.info-item h4:not(:first-of-type) {
 div.info-sidebar {
   flex: 0 0 auto;
   margin: 1rem;
+  width: 12rem;
 }
 
 div.bio-portrait {
