Add Chirayu to team page.

--- a/style.scss
+++ b/style.scss
@@ -247,7 +247,7 @@ div.bio-portrait {
   margin: 1rem;
   margin-top: 1.35rem;
 
-  background-position: center;
+  background-position: 50% 10%;
   background-size: cover;
 }
 
