--- a/style.scss
+++ b/style.scss
@@ -265,7 +265,7 @@ div.bio-contact svg {
 }
 
 @media (min-width: 768px) {
-  div.info-group:nth-of-type(2n) > div.bio-portrait {
+  div.info-group:nth-of-type(2n+1) > div.bio-portrait {
     order: 2;
   }
 }
