--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,14 @@
 
       <div class='contact contact-footer'>
         <h2>Get in touch.</h2>
-        <h3><a href='mailto:hello@seedplus.com'>hello@seedplus.com</a></h3>
+        <h3><a href='mailto:hello@seedplus.com' class='outbound'>hello@seedplus.com</a></h3>
         <div><!-- no row-breaking between the icons -->
-          <a href="{{ site.twitter-url }}">{% include icon-twitter.svg %}</a><a href="{{ site.linkedin-url }}">{% include icon-linkedin.svg %}</a>
+          <a href="{{ site.twitter-url }}">{% include icon-twitter.svg %}</a><a href="{{ site.linkedin-url }}" class='outbound'>{% include icon-linkedin.svg %}</a>
         </div>
       </div>
     </div>
     <footer>
-      <p>&copy; SeedPlus. All rights reserved. <a href="{% if site.github.repository_url %}{{ site.github.repository_url }}{% else %}https://github.com/SeedPlus/seedplus.github.io{% endif %}">Source</a>.</p>
+      <p>&copy; SeedPlus. All rights reserved. <a href="{% if site.github.repository_url %}{{ site.github.repository_url }}{% else %}https://github.com/SeedPlus/seedplus.github.io{% endif %}" class='outbound'>Source</a>.</p>
     </footer>
   </body>
 </html>
