Move Sessions to Calendar and redesign
Move to box-sizing
Remove headers with blue line
Menu bar has no underlines
Subtitle elements rather than header elements
Embrace gray knockout headers as a level below blue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
       <div class='contact contact-footer'>
         <h2>Get in touch.</h2>
-        <h3><a href='mailto:hello@seedplus.com' class='outbound'>hello@seedplus.com</a></h3>
+        <span><a href='mailto:hello@seedplus.com' class='outbound'>hello@seedplus.com</a></span>
         <div><!-- no row-breaking between the icons -->
           <a href="{{ site.twitter-url }}">{% include icon-twitter.svg %}</a><a href="{{ site.linkedin-url }}" class='outbound'>{% include icon-linkedin.svg %}</a>
         </div>
