--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -5,7 +5,7 @@ $logo-bottom-padding: 1.5rem;
 
 #menu {
   padding: 0;
-  margin: 0 (-0.5rem) $logo-bottom-padding (-0.5rem);
+  margin: 0 0 $logo-bottom-padding 0;
 
   display: flex;
   flex-flow: row;
@@ -19,13 +19,8 @@ $logo-bottom-padding: 1.5rem;
 
 #menu > li {
   flex: 1 0 auto;
-  margin: 0 0.5rem;
-
   display: block;
   text-align: right;
-  font-size: 1.2rem;
-  font-weight: 900;
-  text-transform: uppercase;
 }
 
 #menu > li:first-child {
@@ -37,17 +32,35 @@ $logo-bottom-padding: 1.5rem;
   flex: 3 0 auto;
 }
 
-#menu a {
+#menu li:not(:first-child) a {
   text-decoration: none;
-  @include border-underline(transparent);
+  //@include border-underline(transparent);
+  transition: color 0.05s ease-in-out, background-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+
+  font-family: "Raleway", sans-serif;
+
+  font-size: 1.2rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: $seedplus-gray;
+  background-color: white;
+  margin: 0 0.5rem;
+  padding: 0.3rem 0;
+  box-shadow: 0.5rem 0 0 white, -0.5rem 0 0 white;
 }
 
 #menu a.current {
-  @include border-underline($jungle-blue);
+  //@include border-underline($jungle-blue);
+  color: white;
+  background-color: $seedplus-gray;
+  box-shadow: 0.5rem 0 0 $seedplus-gray, -0.5rem 0 0 $seedplus-gray;
 }
 
-#menu a:hover {
-  @include border-underline($seedplus-gray);
+#menu li:not(:first-child) a:hover {
+  //@include border-underline($seedplus-gray);
+  color: white;
+  background-color: $jungle-blue;
+  box-shadow: 0.5rem 0 0 $jungle-blue, -0.5rem 0 0 $jungle-blue;
 }
 
 #logo {
@@ -88,15 +101,25 @@ $logo-bottom-padding: 1.5rem;
     &, & a, & a:hover, & a:visited, & a:active
     {
       color: white;
+      background-color: $seedplus-gray;
+      box-shadow: 0.5rem 0 0 $seedplus-gray, -0.5rem 0 0 $seedplus-gray;
+
+      & a.current {
+        color: $seedplus-gray;
+        background-color: white;
+        box-shadow: 0.5rem 0 0 white, -0.5rem 0 0 white;
+      }
+      & a:hover {
+        color: $jungle-blue;
+        background-color: white;
+        box-shadow: 0.5rem 0 0 white, -0.5rem 0 0 white;
+      }
     }
 
-    & a:hover {
-      @include border-underline(white);
-    }
 
     background-color: $seedplus-gray;
     text-align: left;
-    padding: 0.5rem calc(3rem + 1rem);
+    padding: 0.5rem 3rem;
     margin: 0 -3rem;
   }
 
