--- a/main.scss
+++ b/main.scss
@@ -19,12 +19,13 @@ $underline-width: 0.25rem;
 * {
   /* Safari bug workaround; flex children can shrink arbitrarily otherwise */
   flex: 0 0 auto;
+  box-sizing: border-box;
 }
 
 html {
   height: 100%;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   font-size: 14px;
   color: $seedplus-gray;
 }
@@ -43,10 +44,6 @@ a, a:hover, a:visited, a:active {
   color: $seedplus-gray;
 }
 
-h3 > a {
-  text-decoration: none;
-}
-
 #content {
   width: 100%;
   max-width: 1000px;
@@ -61,7 +58,8 @@ h3 > a {
 footer {
   width: 100%;
   background-color: $seedplus-gray;
-  font-weight: 400;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
   padding: 1rem 0;
   text-align: center;
 
@@ -81,20 +79,6 @@ div.page-header {
   margin: 5rem 0 1rem 0;
   padding: 1rem;
   flex: 1 0 auto;
-}
-
-div.page-header > h1 {
-  display: inline;
-  font-size: 7rem;
-  font-weight: 800;
-  text-transform: uppercase;
-  color: white;
-  background-color: $jungle-blue;
-  line-height: 0.96em;
-  white-space: nowrap;
-  box-decoration-break: clone;
-  /* TODO: this should be only box-decoration-break once support is common enough */
-  box-shadow: 1rem 0 0 $jungle-blue, -1rem 0 0 $jungle-blue;
 }
 
 @media (max-width: 768px) {
@@ -198,33 +182,121 @@ div.bio-contact svg {
   }
 }
 
-h4 {
-  margin: 0;
-  padding-left: 1.5rem;
+h1, h2, h3, h4, h5, .subtitle {
+  font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+  display: inline;
+  font-size: 7rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: white;
+  background-color: $jungle-blue;
+  line-height: 0.96em;
+  white-space: nowrap;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+  box-shadow: 1rem 0 0 $jungle-blue, -1rem 0 0 $jungle-blue;
+}
+
+h2 {
+  display: inline;
   font-size: 1.8rem;
-  font-weight: 900;
-  /* TODO: there might be a better way of doing this */
-  /* border-left: 0.5rem solid $jungle-blue; */
-  box-shadow: inset 0 0.2em white, inset 0.5rem 0 0 $jungle-blue;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: white;
+  background-color: $jungle-blue;
+  margin: 0 0.7rem;
+  padding: 0.4rem 0;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+  box-shadow: 0.7rem 0 0 $jungle-blue, -0.7rem 0 0 $jungle-blue;
+}
+
+h3 {
+  display: inline;
+  font-size: 1.8rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  color: white;
+  background-color: $seedplus-gray;
+  margin: 0 0.7rem;
+  padding: 0.4rem 0;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+  box-shadow: 0.7rem 0 0 $seedplus-gray, -0.7rem 0 0 $seedplus-gray;
+  & ~ .subtitle {
+    font-size: 0.8rem;
+    margin: 0;
+    display: inline;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: white;
+    background-color: $seedplus-gray;
+    margin: 0 0.7rem 0 0.7rem;
+    padding: 0.4rem 0;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    box-shadow: 0.7rem 0 0 $seedplus-gray, -0.7rem 0 0 $seedplus-gray;
+  }
+}
+
+h4 {
+  font-size: 1.8rem;
+  margin: 0;
+  margin-bottom: 0.5rem;
+  padding: 0 0;
+  & + .subtitle {
+    font-size: 0.8rem;
+    margin: 0;
+    font-weight: 500;
+    & span.tag {
+      display: inline;
+      font-weight: 800;
+      text-transform: uppercase;
+      color: white;
+      background-color: $seedplus-gray;
+      margin: 0 0.4+0.2rem 0 0.4rem;
+      padding: 0.2rem 0;
+      box-decoration-break: clone;
+      -webkit-box-decoration-break: clone;
+      box-shadow: 0.4rem 0 0 $seedplus-gray, -0.4rem 0 0 $seedplus-gray;
+    }
+  }
 }
 
 h5 {
-  margin: 0;
-  padding-left: 1.5rem;
-  font-size: 1rem;
-  font-weight: 500;
-  box-shadow: inset 0 0.2em white, inset 0.5rem 0 0 $jungle-blue;
-}
-
-h4 ~ h5 {
-  padding-top: 0.5rem;
-  box-shadow: inset 0.5rem 0 0 $jungle-blue;
+  & + subtitle {
+    margin: 0;
+    font-weight: 500;
+  }
+  & span.tag {
+    display: inline;
+    font-size: 0.8rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: white;
+    background-color: $seedplus-gray;
+    margin: 0 0.4rem;
+    padding: 0.2rem 0;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone;
+    box-shadow: 0.4rem 0 0 $seedplus-gray, -0.4rem 0 0 $seedplus-gray;
+    & + .tag {
+      margin-left: 0.4+0.2rem;
+    }
+  }
 }
 
 p {
   color: black;
-  line-height: 1.8rem;
+  margin-top: 0.6rem;
   margin-bottom: 0;
+  line-height: 1.6em;
+  h2 + &, h3 + & {
+    margin-top: 1rem;
+  }
 }
 
 div.contact-map {
@@ -256,13 +328,20 @@ div.contact-map {
 }
 
 .contact-footer {
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
-.contact > h3 {
-  display: block;
+.contact > span {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
   flex: 1 0 auto;
   margin: 0.4+0.3rem 0.5rem 0.4+0.3rem 0.5rem;
+  & > a {	
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+  }
 }
 
 .contact > h2 {
@@ -272,26 +351,7 @@ div.contact-map {
 .contact svg, .bio-contact svg {
   background-color: $jungle-blue;
   fill: white;
-  height: 1.8rem;
+  height: 2.8rem;
   padding: 0.5rem;
   margin: 0.3rem 0.5rem;
-}
-
-h3 {
-  font-size: 1.8rem;
-  font-weight: 500;
-
-}
-
-h2 {
-  display: inline;
-  font-size: 1.8rem;
-  font-weight: 800;
-  text-transform: uppercase;
-  color: white;
-  background-color: $jungle-blue;
-  margin: 0 0.7rem;
-  padding: 0.4rem 0;
-  /* TODO: this should be box-decoration-break once support is common enough */
-  box-shadow: 0.7rem 0 0 $jungle-blue, -0.7rem 0 0 $jungle-blue;
 }
