--- a/main.scss
+++ b/main.scss
@@ -44,6 +44,10 @@ a, a:hover, a:visited, a:active {
   color: $seedplus-gray;
 }
 
+b {
+  font-weight: 500;
+}
+
 #content {
   width: 100%;
   max-width: 1000px;
@@ -296,6 +300,23 @@ p {
   line-height: 1.6em;
   h2 + &, h3 + & {
     margin-top: 1rem;
+  }
+}
+
+blockquote {
+  display: block;
+  font-style: italic;
+  margin: 0 2rem;
+  &::before {
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    content: '\275D\275E';
+    //color: white;
+    //text-shadow: 1px 0 0 $seedplus-gray, -1px 0 0 $seedplus-gray, 0 1px 0 $seedplus-gray, 0 -1px 0 $seedplus-gray;
+
+    float: left;
+    font-size: 2rem;
+    margin: 0 1rem 0 0;
   }
 }
 
