--- a/main.scss
+++ b/main.scss
@@ -192,7 +192,7 @@ div.bio-contact svg {
   }
 }
 
-h1, h2, h3, h4, h5, .subtitle {
+h1, h2, h3, h4, .subtitle {
   font-family: 'Raleway', sans-serif;
 }
 
@@ -273,6 +273,9 @@ h4 {
       -webkit-box-decoration-break: clone;
       box-shadow: 0.4rem 0 0 $lighter-gray, -0.4rem 0 0 $lighter-gray;
     }
+  }
+  & > a {
+    text-decoration: none;
   }
 }
 
