--- a/main.scss
+++ b/main.scss
@@ -21,6 +21,9 @@ $underline-width: 0.25rem;
   /* Safari bug workaround; flex children can shrink arbitrarily otherwise */
   flex: 0 0 auto;
   box-sizing: border-box;
+  &.hidden {
+    display: none;
+  }
 }
 
 html {
@@ -222,6 +225,26 @@ h2 {
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
   box-shadow: 0.7rem 0 0 $jungle-blue, -0.7rem 0 0 $jungle-blue;
+  & ~ ul.toggle {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: $lighter-gray;
+    margin: 0.4+0.3rem 0.5rem 0.4+0.3rem 0.5rem;
+    list-style: none;
+    padding: 0;
+    & > li {
+      transition: color 0.1s ease-in-out;
+      &.active, &:hover {
+        color: $seedplus-gray;
+      }
+    }
+    & > a { 
+      margin: 0;
+      padding: 0;
+      text-decoration: none;
+    }
+  }
 }
 
 h3 {
@@ -289,6 +312,10 @@ p {
   }
 }
 
+.calendar-item + .calendar-item {
+  margin-top: 2rem;
+}
+
 blockquote {
   display: block;
   font-style: italic;
@@ -341,7 +368,7 @@ div.contact-map {
   font-weight: 500;
   flex: 1 0 auto;
   margin: 0.4+0.3rem 0.5rem 0.4+0.3rem 0.5rem;
-  & > a {	
+  & > a { 
     margin: 0;
     padding: 0;
     text-decoration: none;
