--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,8 @@
   <meta property="og:title" content="{{ site.title | escape }}{% if page.title %} - {{ page.title | escape }}{% endif %}" />
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
   <meta property="og:image" content="/images/open-graph-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
   <meta property="fb:admins" content="100000901583954" />
 
